  app to correlate error groups and transaction groups. ({issues}2456[#2456])

[float]
===== Bug fixes

* Fixes for run context handling for '@elastic/elasticsearch' instrumentation.
  ({issues}2430[#2430])

* Fixes for run context handling for 'cassandra-driver' instrumentation.
  ({issues}2430[#2430])

* Fixes for run context handling for 'mongodb-core' instrumentation.
  ({issues}2430[#2430])


[[release-notes-3.27.0]]
==== 3.27.0 2022/01/17

[float]
===== Features

* Add support for express-graphql 0.10.0 - 0.12.0 inclusive. ({pull}2511[#2511])

[float]
===== Bug fixes

* Fix an issue where the agent's async task tracking could cause the user's
  application to use too much memory. In cases where an application is under
  sustained load and is running in a memory constrained container, this looked
  like a memory leak.
+
This high memory usage could happen when application code starts async tasks
(e.g. Promises, setTimeouts, async I/O) that outlive the APM Transaction
(typically an HTTP request handler). The agent's async task tracking keeps a
reference to the APM Transaction (and any APM Spans) until the async task
ends, thus extending the lifetime of those APM objects and the references
they hold -- in particular, HTTP request and response objects. This could lead
to higher memory usage.
+
With this change, those references are removed when APM Transactions and Spans
are ended, and agent memory usage is now the same as what it was before
v3.24.0 when this issue was introduced. ({pull}2528[#2528], {issues}2489[#2489])

* Fixes for run context handling for 'graphql' instrumentation.
  ({issues}2430[#2430])

* Fixes for run context handling for DynamoDB instrumentation ('aws-sdk'
  package) so that a span created after an AWS client command (in the same
  tick, in the command callback, or promise) is not a child of the automatic
  AWS span. This change also ensures captured errors from failing client
  commands are a child of the AWS span. ({issues}2430[#2430])
