@@ -56,6 +56,8 @@ function getHostAndPortFromTransportConfig (config) {
 module.exports = function (elasticsearch, agent, { enabled }) {
   if (!enabled) return elasticsearch
 
+  const ins = agent._instrumentation
+
   agent.logger.debug('shimming elasticsearch.Transport.prototype.request')
   shimmer.wrap(elasticsearch.Transport && elasticsearch.Transport.prototype, 'request', wrapRequest)
 
@@ -63,7 +65,7 @@ module.exports = function (elasticsearch, agent, { enabled }) {
 
   function wrapRequest (original) {
     return function wrappedRequest (params, cb) {
-      var span = agent.startSpan(null, 'db', 'elasticsearch', 'request')
+      var span = ins.createSpan(null, 'db', 'elasticsearch', 'request')
       var id = span && span.transaction.id
       var method = params && params.method
       var path = params && params.path
@@ -85,15 +87,17 @@ module.exports = function (elasticsearch, agent, { enabled }) {
         }
         span.setDestinationContext(getDBDestination(span, host, port))
 
+        const parentRunContext = ins.currRunContext()
+        const spanRunContext = parentRunContext.enterSpan(span)
         if (typeof cb === 'function') {
           var args = Array.prototype.slice.call(arguments)
           args[1] = function () {
             span.end()
-            return cb.apply(this, arguments)
+            ins.withRunContext(parentRunContext, cb, this, ...arguments)
           }
-          return original.apply(this, args)
+          return ins.withRunContext(spanRunContext, original, this, ...args)
         } else {
-          const originalPromise = original.apply(this, arguments)
+          const originalPromise = ins.withRunContext(spanRunContext, original, this, ...arguments)
 
           const descriptors = Object.getOwnPropertyDescriptors(originalPromise)
           delete descriptors.domain
