@@ -61,6 +61,9 @@ Notes:
 * Fixes for run context handling for 'mongodb-core' instrumentation.
   ({issues}2430[#2430])
 
+* Fixes for run context handling for 'elasticsearch' instrumentation.
+  ({issues}2430[#2430])
+
 
 [[release-notes-3.27.0]]
 ==== 3.27.0 2022/01/17
